--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ body{
 
 b{
   font-weight: 900;
-  color: #9067C6;
+  color: #62dafc;
 }
 
 /* Scrollbar */
@@ -90,7 +90,7 @@ b{
   font-size: 32px;
   letter-spacing: 2px;
   padding-left: 7%;
-  color: #9067C6;
+  color: #62dafc;
   display: flex;
   align-items: center;
   text-align: center;
@@ -112,7 +112,7 @@ b{
 }
 
 .NavbarLinks a{
-  color: #c2c1c2;
+  color: #c1c2c2;
   display:flex;
   align-items: center;
   justify-content: space-between;
@@ -127,7 +127,7 @@ b{
   color: #ffffff;
 }
 .NavbarLinks a::after{
-  background-color: #ffffff;
+  background-color: #92e2f2;
   content: "";
   position: absolute;
   height: 3px;
@@ -157,7 +157,7 @@ b{
     position: fixed;
     inset: 0 0 0 50%;
     gap: 50px;
-    background-color:#431f47;
+    background-color:#2f8aa6;
     height: 100vh;
     padding-top: max(20%,120px);
     transform: translateX(100%);
@@ -297,7 +297,7 @@ b{
   padding-bottom: 40px;
 }
 .AboutText a{
-  color: #9067C6;
+  color: #62dafc;
   text-decoration: underline;
   font-weight: bold;
 }
@@ -345,14 +345,14 @@ b{
   align-items: center;
   justify-content: center;
   margin: 0px 25px 25px 0px;
-  border: 3px solid #431f47;
+  border: 3px solid #62dafc;;
   font-size: 64px;
   border-radius: 5px;
   transition: 0.5s;
 }
 .SkillBox:hover{
   transform: scale(1.2);
-  box-shadow: 0 2px 8px 0 #431f47;
+  box-shadow: 0 2px 8px 0 #0fb5d6;
 }
 
 .SkillsHeading{
@@ -401,7 +401,7 @@ b{
 
 .projectBox{
   width: 350px;
-  border: 3px solid #431f47;
+  border: 3px solid #1f779a;
   border-radius: 5px;
   text-align: center;
   padding: 15px;
@@ -414,7 +414,7 @@ b{
 }
 .projectBox:hover{
   transform: scale(1.05);
-  box-shadow: 0 4px 10px 0 #431f47;
+  box-shadow: 0 4px 10px 0 #238eb5;
 }
 
 .projectPhoto{
@@ -431,7 +431,7 @@ b{
   width: 40%;
   margin: 25px 3% 0;
   border-radius: 5px;
-  background-color: #431f47;
+  background-color: #238eb5;
   color: #E7E7E7;
   height: 30px;
   cursor:pointer;
@@ -459,7 +459,7 @@ b{
   margin: 25px 0px;
   width: 200px;
   height: 40px;
-  background-color:#431f47;
+  background-color:#238eb5;
   color: #E7E7E7;
   text-decoration: none;
   border-radius: 5px;
@@ -469,8 +469,8 @@ b{
 
 .downloadCV:hover{
   transition: all 0.5s;
-  background-color: #E7E7E7;
-  color: #431f47;
+  background-color: #88d7e7;
+  color: #185d76;
 }
 
 
